Blog post, gifs

--- a/i-feel-elevated/index.html
+++ b/i-feel-elevated/index.html
@@ -105,6 +105,15 @@
     
       <li>
         <h3>
+          <a href="/gifs">
+            Gifs
+            <small>17 Mar 2014</small>
+          </a>
+        </h3>
+      </li>
+    
+      <li>
+        <h3>
           <a href="/dat-map">
             Dat Map
             <small>08 Mar 2014</small>
