--- a/to-scale/index.html
+++ b/to-scale/index.html
@@ -97,6 +97,8 @@
 
 <p>Good enough for a test.</p>
 
+<p>edit: Actaully I fixed it because I needed a quad-batcher anyway.</p>
+
 <p><img src="/images/14.gif" alt="Rotating 3d map"></p>
 
 </div>
