--- a/train/index.html
+++ b/train/index.html
@@ -109,6 +109,8 @@
 
 <p>I find it interesting how tiny the voxel terrain looks (all the terrain maps are 32x32). I think it&#39;s because it&#39;s easy to judge scale in that screenshot from the cube shapes. Heightmap terrain in particular, you have no idea about scale until you place objects on the map.</p>
 
+<p><img src="/images/19.gif" alt="Gif of different terrains using same noise seed"></p>
+
 </div>
 
 <div class="related">
